# db2_vs_pg

./: Dockerfile  Makefile  docker-compose.yml  mix.exs
lib/: db2wrapper.ex
lib/benchmark/db2_vs_pg/: README.md  benchmark.ex  benchmark_start.exs  db2.ex  pg.ex  pg_worker.ex
lib/gen_game/: application.ex
native/db2wrapper/: Cargo.toml  README.md  db2cli.ini  db2dsdriver.cfg  odbc.ini  odbcinst.ini
native/db2wrapper/benches/: benchmark_insert.rs
native/db2wrapper/src/: db2.rs  lib.rs
