[package]
name = "db2wrapper"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "db2wrapper"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
ibm_db = "1.0.5"
odbc-safe = "0.6.0"
prettytable-rs = "0.10.0"
rustler = "0.33"
tokio = "1.38.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark_insert"
harness = false
